--- a/libs/lib_presentation_test/src/main/res/values/styles.xml
+++ b/libs/lib_presentation_test/src/main/res/values/styles.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat" />
+    <style name="AppTheme" parent="Theme.MaterialComponents" />
 
 </resources>
